fixed the styling on the bottom footer because it was acting up on mobile mode

--- a/styleSC.css
+++ b/styleSC.css
@@ -161,9 +161,9 @@ th{
     text-align: center;
 }
 .about{
-    width: 250px;
+
     display: inline;
-    height:250px;
+
 }
 li{
     display: inline-block;
